--- a/dropout-contest-scoring.ipynb
+++ b/dropout-contest-scoring.ipynb
@@ -376,15 +376,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(candidateDictionary['Marianne Williamson'])  # Delaney = 4\n",
+    "print(candidateDictionary['Marianne Williamson'])  # Williamson = 4\n",
     "print(candidateDictionary['Cory Booker'])  # Booker = 5\n",
     "print(candidateDictionary['John Delaney'])  # Delaney = 3\n",
     "print(candidateDictionary['Andrew Yang'])  # Yang = 9\n",
     "print(candidateDictionary['Michael Bennet'])  # Bennet = 1\n",
     "print(candidateDictionary['Deval Patrick'])  # Patrick = 2\n",
     "print(candidateDictionary['Tom Steyer'])  # Steyer = 6\n",
-    "print(candidateDictionary['Pete Buttigieg'])  # pete = 11\n",
-    "print(candidateDictionary['Amy Klobuchar'])  # amy = 8"
+    "print(candidateDictionary['Pete Buttigieg'])  # Buttigieg = 11\n",
+    "print(candidateDictionary['Amy Klobuchar'])  # Klobuchar = 8"
    ]
   },
   {
@@ -628,7 +628,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
