heatmap with 2024 data

--- a/python/heatmap.ipynb
+++ b/python/heatmap.ipynb
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -640,7 +640,9 @@
     "    \n",
     "heatmap = pd.DataFrame(candidatePositionCounts).fillna(0).transpose()\n",
     "\n",
-    "# display(heatmap)  # hiding until submission window closes"
+    "heatmap.reset_index().to_csv(\"../2024/leaderboard/data/heatmapData.csv\", index = False)\n",
+    "\n",
+    "#display(heatmap)  # hiding until submission window closes"
    ]
   },
   {
