some heatmap adjustments

--- a/python/heatmap.ipynb
+++ b/python/heatmap.ipynb
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -639,6 +639,7 @@
     "    candidatePositionCounts.append(data[c].value_counts().to_dict())\n",
     "    \n",
     "heatmap = pd.DataFrame(candidatePositionCounts).fillna(0).transpose()\n",
+    "heatmap.columns = pd.RangeIndex(start=1, stop=13, step=1)\n",
     "\n",
     "heatmap.reset_index().to_csv(\"../2024/leaderboard/data/heatmapData.csv\", index = False)\n",
     "\n",
