--- a/python/contest-scoring.ipynb
+++ b/python/contest-scoring.ipynb
@@ -2,62 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "860bd018",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import itertools\n",
-    "import pandas as pd\n",
-    "import statistics\n",
-    "    \n",
-    "def calculateKendallTauDistance(listA, listB):\n",
-    "    distance = 0\n",
-    "    combinations = []\n",
-    "    for a in listA:\n",
-    "        for b in listB:\n",
-    "            if a != b:\n",
-    "                combinations.append(sorted([a, b]))\n",
-    "    pairs = list(set(map(tuple, combinations)))\n",
-    "    for x, y in pairs:\n",
-    "        a = listA.index(x) - listA.index(y)\n",
-    "        b = listB.index(x) - listB.index(y)\n",
-    "        if a * b < 0:\n",
-    "            distance += 1\n",
-    "    return distance\n",
-    "\n",
-    "def partialScoring(dropOutOrder, playerPredictionsArray):\n",
-    "    placeHolders1 = list(map(chr, range(97, 97 + len(playerPredictionsArray) - 1)))\n",
-    "    placeHolders2 = list(map(chr, range(97, 97 + len(playerPredictionsArray) - 1)))\n",
-    "    \n",
-    "    predictionsWithPlaceHolders = []\n",
-    "    dropsWithPlaceHolders = []\n",
-    "    \n",
-    "    for candidate in playerPredictionsArray:\n",
-    "        if candidate not in dropOutOrder: # candidate hasn't dropped yet\n",
-    "            predictionsWithPlaceHolders.append(placeHolders1.pop())\n",
-    "        else: # candidate has dropped\n",
-    "            predictionsWithPlaceHolders.append(candidate)\n",
-    "                \n",
-    "    for i, candidate in enumerate(playerPredictionsArray):\n",
-    "        if i < len(dropOutOrder):\n",
-    "            dropsWithPlaceHolders.append(dropOutOrder[i])\n",
-    "        else:\n",
-    "            dropsWithPlaceHolders.append(placeHolders2.pop())\n",
-    "        \n",
-    "    print(predictionsWithPlaceHolders)\n",
-    "    print(dropsWithPlaceHolders)\n",
-    "    \n",
-    "    return calculateKendallTauDistance(dropsWithPlaceHolders, predictionsWithPlaceHolders);\n",
-    "\n",
-    "df = pd.read_csv(\"../2024/leaderboard/data/submissions2024.csv\")\n",
-    "df = df[['leaderboardAlias', 'prediction']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "id": "4867c232",
+   "execution_count": 205,
+   "id": "f531c857",
    "metadata": {},
    "outputs": [
     {
@@ -105,40 +51,116 @@
     }
    ],
    "source": [
+    "import itertools\n",
+    "import pandas as pd\n",
+    "import statistics\n",
+    "\n",
+    "pd.options.mode.chained_assignment = None  # default='warn'\n",
+    "    \n",
+    "def calculateKendallTauDistance(listA, listB):\n",
+    "    distance = 0\n",
+    "    combinations = []\n",
+    "    for a in listA:\n",
+    "        for b in listB:\n",
+    "            if a != b:\n",
+    "                combinations.append(sorted([a, b]))\n",
+    "    pairs = list(set(map(tuple, combinations)))\n",
+    "    for x, y in pairs:\n",
+    "        a = listA.index(x) - listA.index(y)\n",
+    "        b = listB.index(x) - listB.index(y)\n",
+    "        if a * b < 0:\n",
+    "            distance += 1\n",
+    "    return distance\n",
+    "\n",
+    "def partialScoring(dropOutOrder, playerPredictionsArray):\n",
+    "    placeHolders1 = list(map(chr, range(97, 97 + len(playerPredictionsArray) - 1)))\n",
+    "    placeHolders2 = list(map(chr, range(97, 97 + len(playerPredictionsArray) - 1)))\n",
+    "    \n",
+    "    predictionsWithPlaceHolders = []\n",
+    "    dropsWithPlaceHolders = []\n",
+    "    \n",
+    "    for candidate in playerPredictionsArray:\n",
+    "        if candidate not in dropOutOrder: # candidate hasn't dropped yet\n",
+    "            predictionsWithPlaceHolders.append(placeHolders1.pop())\n",
+    "        else: # candidate has dropped\n",
+    "            predictionsWithPlaceHolders.append(candidate)\n",
+    "                \n",
+    "    for i, candidate in enumerate(playerPredictionsArray):\n",
+    "        if i < len(dropOutOrder):\n",
+    "            dropsWithPlaceHolders.append(dropOutOrder[i])\n",
+    "        else:\n",
+    "            dropsWithPlaceHolders.append(placeHolders2.pop())\n",
+    "    \n",
+    "    return calculateKendallTauDistance(dropsWithPlaceHolders, predictionsWithPlaceHolders);\n",
+    "\n",
+    "df = pd.read_csv(\"../2024/leaderboard/data/submissions2024.csv\")\n",
+    "df = df[['leaderboardAlias', 'prediction']]\n",
+    "\n",
     "display(df.tail(1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "id": "81c64f46",
-   "metadata": {},
+   "execution_count": 206,
+   "id": "2b0bcbef",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['hurd', 'elder', 'suarez', 'hutchinson', 'burgum', 'christie', 'scott', 'haley', 'ramaswamy', 'pence', 'desantis', 'trump']\n",
-      "['trump', 'desantis', 'pence', 'ramaswamy', 'haley', 'scott', 'christie', 'burgum', 'hutchinson', 'suarez', 'elder', 'hurd']\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
-       "66"
+       "10"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "averageOrder = ['hurd','elder','suarez','hutchinson','burgum','christie','scott','haley','ramaswamy','pence','desantis','trump']\n",
-    "reversed_list = averageOrder[::-1]\n",
     "dropOutOrder = ['desantis', 'hurd', 'elder']\n",
     "\n",
-    "partialScoring(reversed_list, averageOrder)"
+    "partialScoring(dropOutOrder, averageOrder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "id": "2a81efab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a column for every previous and current round, so we can track score over time\n",
+    "for i in range(0, len(averageOrder)):\n",
+    "    df['round_' + str(i+1) + '_score'] = 0\n",
+    "    \n",
+    "# create a column for most recent round's score\n",
+    "df['kendallDistance'] = 0\n",
+    "    \n",
+    "# calc kendall distances for every previous round and the current round\n",
+    "for i in df.index:\n",
+    "    prediction = df['prediction'][i].split(\",\")[:-1]\n",
+    "    for round in range(0, len(averageOrder)):\n",
+    "        df['round_' + str(round+1) + '_score'][i] = partialScoring(averageOrder[:round+1], prediction)\n",
+    "    df['kendallDistance'][i] = partialScoring(averageOrder, prediction)\n",
+    "    \n",
+    "# for every distance column, create a rank column\n",
+    "df['rank'] = df['kendallDistance'].rank(method='min')\n",
+    "\n",
+    "for i in range(0, len(averageOrder)):\n",
+    "    df['round_' + str(i+1) + '_rank'] = df['round_' + str(i+1) + '_score'].rank(method='min')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "id": "f6170da6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"../2024/leaderboard/data/submissions2024.csv\", index=False)"
    ]
   }
  ],
