--- a/python/contest-data-analysis.ipynb
+++ b/python/contest-data-analysis.ipynb
@@ -2,15 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "id": "38aa7bea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2020 Democratic Primary Drop Out Predictions Scoring Formulas\n",
+    "# Author: Oliver Gladfelter\n",
+    "# Date: Aug 22, 2023"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
    "id": "4f9d3be1",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "from collections import Counter\n",
+    "import statistics\n",
+    "pd.options.mode.chained_assignment = None  # default='warn'\n",
     "\n",
     "df = pd.read_csv(\"../2024/leaderboard/data/submissions2024.csv\")\n",
-    "df = df[['leaderboardAlias', 'prediction']]"
+    "df = df[['leaderboardAlias', 'prediction']]\n",
+    "\n",
+    "# create a new dataframe with reformatted data, which will help answer some questions\n",
+    "long = df.copy()\n",
+    "long[[1,2,3,4,5,6,7,8,9,10,11,12,'x']] = long['prediction'].str.split(',',expand=True)\n",
+    "long = long.drop(['leaderboardAlias', 'prediction', 'x'], axis=1)\n",
+    "\n",
+    "# another reformatted dataset\n",
+    "# this reformatted data will be necessary for answering certain questions\n",
+    "candidatePositions = {}\n",
+    "for row in long.index:\n",
+    "    for column in long.columns:\n",
+    "        if long[column][row] not in candidatePositions:\n",
+    "            candidatePositions[long[column][row]] = [int(column)]\n",
+    "        elif long[column][row] in candidatePositions:\n",
+    "            candidatePositions[long[column][row]].append(int(column))\n",
+    "candidatePositions = pd.DataFrame(candidatePositions)\n",
+    "\n",
+    "# numParticipants\n",
+    "n = len(df)"
    ]
   },
   {
@@ -96,20 +130,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "3cedd075",
-   "metadata": {},
-   "source": [
-    "## Add average answer to submissions"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 20,
    "id": "2cc50927",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Add average answer to submissions\n",
     "predictionStr = ''\n",
     "for p in averageOrder:\n",
     "    predictionStr += p + ','\n",
@@ -120,7 +147,328 @@
     "\n",
     "df = df.append(aggregateRow, ignore_index=True)\n",
     "\n",
-    "df.to_csv(\"../2024/leaderboard/data/submissions2024.csv\", index=False)"
+    "#df.to_csv(\"../2024/leaderboard/data/submissions2024.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "003eb235",
+   "metadata": {},
+   "source": [
+    "## Who are common picks for predicted first drop? Predicted winner? Etc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "d4f27807",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "hurd      26.0\n",
+       "elder     22.0\n",
+       "suarez    18.0\n",
+       "Name: 1, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "suarez    22.0\n",
+       "elder     22.0\n",
+       "hurd      16.0\n",
+       "Name: 2, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "hurd      20.0\n",
+       "elder     18.0\n",
+       "suarez    16.0\n",
+       "Name: 3, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "desantis     48.0\n",
+       "ramaswamy    16.0\n",
+       "trump        12.0\n",
+       "Name: 11, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "trump        82.0\n",
+       "desantis     10.0\n",
+       "ramaswamy     4.0\n",
+       "Name: 12, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def perForPosition(dropPosition):\n",
+    "    display(long[dropPosition].value_counts().head(3) / n * 100)\n",
+    "\n",
+    "perForPosition(1) # first drop\n",
+    "perForPosition(2) # second drop\n",
+    "perForPosition(3) # third drop\n",
+    "perForPosition(11) # last drop\n",
+    "perForPosition(12) # winner"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b790778",
+   "metadata": {},
+   "source": [
+    "## What percent of predictions put Hurd / Elder / Suarez in the first three drops?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "id": "105bc71c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "66.0\n",
+      "62.0\n",
+      "62.0\n",
+      "56.00000000000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "# predicts hurd or elder or suarez as first drop\n",
+    "print(len(long[(long[1] == 'hurd') | (long[1] == 'elder') | (long[1] == 'suarez')]) / n * 100)\n",
+    "\n",
+    "# predicts various candidates as first three drops\n",
+    "print(len(candidatePositions[candidatePositions['hurd'] <= 3]) / n * 100)\n",
+    "print(len(candidatePositions[candidatePositions['elder'] <= 3]) / n * 100)\n",
+    "print(len(candidatePositions[candidatePositions['suarez'] <= 3]) / n * 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "id": "bc6050b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "% of respondents who think candidate will be one of the first three to drop out\n",
+      " \n",
+      "ramaswamy: 16.0\n",
+      "hurd: 62.0\n",
+      "hutchinson: 38.0\n",
+      "elder: 62.0\n",
+      "pence: 2.0\n",
+      "christie: 14.000000000000002\n",
+      "burgum: 36.0\n",
+      "scott: 10.0\n",
+      "haley: 4.0\n",
+      "suarez: 56.00000000000001\n",
+      "trump: 0.0\n",
+      "desantis: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"% of respondents who think candidate will be one of the first three to drop out\")\n",
+    "print(\" \")\n",
+    "\n",
+    "for candidate in reformattedData.columns:\n",
+    "    print(candidate + \": \" + str(len(reformattedData[reformattedData[candidate] <= 3]) / n * 100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbcf9530",
+   "metadata": {},
+   "source": [
+    "## How about all three?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "id": "fb826483",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18.0"
+      ]
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(candidatePositions[((candidatePositions['hurd'] <= 3) & (candidatePositions['elder'] <= 3) & (candidatePositions['suarez'] <= 3))]) / n * 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17622c21",
+   "metadata": {},
+   "source": [
+    "## Where do we see the most/least disagreement over candidates?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "id": "b2cdf56b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>candidate</th>\n",
+       "      <th>stdv</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>trump</td>\n",
+       "      <td>0.957036</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>desantis</td>\n",
+       "      <td>1.519398</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>hurd</td>\n",
+       "      <td>1.725676</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>pence</td>\n",
+       "      <td>1.897904</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>elder</td>\n",
+       "      <td>1.944537</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>haley</td>\n",
+       "      <td>2.057936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>hutchinson</td>\n",
+       "      <td>2.161254</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>suarez</td>\n",
+       "      <td>2.420659</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>scott</td>\n",
+       "      <td>2.504201</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>burgum</td>\n",
+       "      <td>2.595129</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>christie</td>\n",
+       "      <td>2.685106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ramaswamy</td>\n",
+       "      <td>3.208725</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     candidate      stdv\n",
+       "10       trump  0.957036\n",
+       "11    desantis  1.519398\n",
+       "1         hurd  1.725676\n",
+       "4        pence  1.897904\n",
+       "3        elder  1.944537\n",
+       "8        haley  2.057936\n",
+       "2   hutchinson  2.161254\n",
+       "9       suarez  2.420659\n",
+       "7        scott  2.504201\n",
+       "6       burgum  2.595129\n",
+       "5     christie  2.685106\n",
+       "0    ramaswamy  3.208725"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "stdvs = []\n",
+    "for candidate in reformattedData.columns:\n",
+    "    stdvs.append(statistics.stdev(reformattedData[candidate]))\n",
+    "    \n",
+    "stdvs = pd.DataFrame({'candidate':reformattedData.columns, 'stdv':stdvs})\n",
+    "\n",
+    "# most agreement over Trump (going far), most disagreement on Ramaswamy (he's been positioned all over the place)\n",
+    "# also worth mentioning DeSantis, Hurd, Christie\n",
+    "display(stdvs.sort_values('stdv'))"
    ]
   }
  ],
