--- a/python/contest-data-analysis.ipynb
+++ b/python/contest-data-analysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38aa7bea",
+   "id": "7bdf9251",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "003eb235",
+   "id": "d87ed54a",
    "metadata": {},
    "source": [
     "## Who are common picks for predicted first drop? Predicted winner? Etc"
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "d4f27807",
+   "id": "e9d614ee",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b790778",
+   "id": "8dda5a68",
    "metadata": {},
    "source": [
     "## What percent of predictions put Hurd / Elder / Suarez in the first three drops?"
@@ -246,8 +246,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
-   "id": "105bc71c",
+   "execution_count": 221,
+   "id": "c61d9271",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,8 @@
       "66.0\n",
       "62.0\n",
       "62.0\n",
-      "56.00000000000001\n"
+      "56.00000000000001\n",
+      "18.0\n"
      ]
     }
    ],
@@ -268,13 +269,16 @@
     "# predicts various candidates as first three drops\n",
     "print(len(candidatePositions[candidatePositions['hurd'] <= 3]) / n * 100)\n",
     "print(len(candidatePositions[candidatePositions['elder'] <= 3]) / n * 100)\n",
-    "print(len(candidatePositions[candidatePositions['suarez'] <= 3]) / n * 100)"
+    "print(len(candidatePositions[candidatePositions['suarez'] <= 3]) / n * 100)\n",
+    "\n",
+    "# how about all 3?\n",
+    "print(len(candidatePositions[((candidatePositions['hurd'] <= 3) & (candidatePositions['elder'] <= 3) & (candidatePositions['suarez'] <= 3))]) / n * 100)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "bc6050b2",
+   "id": "ed8a2ed0",
    "metadata": {},
    "outputs": [
     {
@@ -308,36 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbcf9530",
-   "metadata": {},
-   "source": [
-    "## How about all three?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 189,
-   "id": "fb826483",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "18.0"
-      ]
-     },
-     "execution_count": 189,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(candidatePositions[((candidatePositions['hurd'] <= 3) & (candidatePositions['elder'] <= 3) & (candidatePositions['suarez'] <= 3))]) / n * 100"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "17622c21",
+   "id": "e7cb2cb0",
    "metadata": {},
    "source": [
     "## Where do we see the most/least disagreement over candidates?"
@@ -346,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "id": "b2cdf56b",
+   "id": "41bfde50",
    "metadata": {},
    "outputs": [
     {
